--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en-us">
+
 <head>
   <meta charset="UTF-8" />
+
  <title>Adia Boyd</title>
  <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,16 +26,16 @@
  </div>
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
  <ul class="nav navbar-nav  navbar-right" id="navbar-links">
-  <a href="index.html" id="logo">Adia Boyd</a>
-     <nav>
-  <a href="index.html">About</a>
- <a href="portfolio.html">Portfolio</a>
- <a href="contact.html">Contact</a>
-   </div>
- </div>
- </div>
- </nav>
-      
+<a href="index.html" id="logo">Adia Boyd</a>
+ <nav>
+<li><a href="index.html">About</a></li>
+ <li><a href="portfolio.html">Portfolio</a></li>
+ <li><a href="contact.html">Contact</a></li>
+</ul>
+</div>
+</div>
+</div>
+</nav>
  <div class="container">
       
 <div class="row">
@@ -45,7 +48,8 @@
  <p> I have musuem, photography and software learning experience. I worked for 4 years.I am now working on a degree. 
      </p>
    <p> Having some hidden talents like software programming and entrenuepeurship, 
-       I would like to work indoors and outdoors. I love travelling. 
+       I would like to work indoors and outdoors. I love travelling and reading 
+       books. 
     </p>
    </section>
 
