--- a/Portfolio.html
+++ b/Portfolio.html
@@ -194,9 +194,9 @@
  <div class="col-md-3 col-md-offset-1 sidebar">
  <h2>Connect with Me</h2>
                           
- <a href="https://github.com/codeyab22"><img class="social img-responsive" src="assets/images/github.png" alt="GitHub"></a>
- <a href="https://www.linkedin.com/in/adia-boyd-58a21162"><img class="social img-responsive" src="assets/images/linkedin.png" alt="LinkedIn"></a>
- <a href="https://stackoverflow.com/users/14427722/codeyab"><img class="social img-responsive" src="assets/images/stackoverflow.png" alt="StackExchange"></a>
+ <a href="https://github.com/codeyab22"><img class="social img-responsive" src="github.png" alt="GitHub"></a>
+ <a href="https://www.linkedin.com/in/adia-boyd-58a21162"><img class="social img-responsive" src="linkedin.png" alt="LinkedIn"></a>
+ <a href="https://stackoverflow.com/users/14427722/codeyab"><img class="social img-responsive" src=stackoverflow.png" alt="StackExchange"></a>
  </div>
  </div>
 </div>
