--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
        I would like to work indoors and outdoors. I love travelling and reading 
        books. 
     </p>
-   </section>
-
- <section class="sidebar">
+    <div>
+    </div>
+   
+	<div class="col-md-3 col-md-offset-1 sidebar">
+ <div class="sidebar">
  <div id="connect"> 
       <h2>Connect with Me</h2>
 
