--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
      <span class="sr-only">Toggle navigation</span>
      <span class="icon-bar"></span>
      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
 </button>
 <a class="navbar-brand" href="#" id="logo">Adia Boyd</a>
  </div>
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
  <ul class="nav navbar-nav  navbar-right" id="navbar-links">
 <a href="index.html" id="logo">Adia Boyd</a>
- <nav>
-<li><a href="index.html">About</a></li>
+ </div>
+ <li><a href="index.html">About</a></li>
  <li><a href="portfolio.html">Portfolio</a></li>
  <li><a href="contact.html">Contact</a></li>
 </ul>
@@ -42,20 +42,22 @@
 <div class="col-md-8 main-section">
  <h1>About Me</h1>
 <div class="row">
- <img class="pull-left img-responsive" id="profile-photo" src="Adia's Pic.jpg" alt="Adia Boyd's Photo">
-  <p>My name is Adia Boyd. My interests are creative writing and science inspired me to code. 
+ <img class="pull-left img-responsive" id="profile-photo" src="Adia's Pic.jpg" alt="Adia Boyd's Pic">
+  <p>My name is Adia Boyd. My interests are creative writing and science inspired me to code. I joined 
+   in boot camp to get into the practice of learning new technologies and writing projects.  
   </p>
- <p> I have musuem, photography and software learning experience. I worked for 4 years.I am now working on a degree. 
+ <p> I have musuem, photography and software learning experience. I worked for 4 years.
+    I am now working on a degree and hopes to graduate from boot camp. 
      </p>
    <p> Having some hidden talents like software programming and entrenuepeurship, 
-       I would like to work indoors and outdoors. I love travelling and reading 
-       books. 
+      I would like to work indoors and outdoors. I love travelling, reading   
+      novels that are out of this world. 
     </p>
     <div>
     </div>
    
 	<div class="col-md-3 col-md-offset-1 sidebar">
- <div class="sidebar">
+ <section class="sidebar">
  <div id="connect"> 
       <h2>Connect with Me</h2>
 
