--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+     <div class="navbar navbar-fixed-top">
+  </div>
   <nav class="navbar navbar-default" id="masthead">
  <div class="container">
   <div class="navbar-header">   
