--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 
 <body>
   
-  <nav class="navbar navbar-default" id="masthead">
+  <nav class="navbar navbar-default navbar-fixed-top" id="masthead">
     <div class="container">
        <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
