--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="col-md-8 main-section">
  <h1>About Me</h1>
 <div class="row">
- <img class="pull-left img-responsive" id="profile-photo" src="Adia's Pic.jpg" alt="Adia Boyd's Pic">
+ <img src="Adia's Pic.jpg" class="pull-left img-responsive" id="profile-photo" alt="Adia Boyd's Pic">
   <p>My name is Adia Boyd. My interests are creative writing and science. I joined 
    in boot camp to get into the practice of learning new technologies and writing projects. My goals are
    to be colorful with coding and telling complex stories that inspire me as a developer.      
