--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
  <p> I have musuem, photography and software learning experience. I worked for 4 years.
     I am now working on a degree and hopes to graduate from boot camp. 
      </p>
-   <p> Having some hidden talents like software programming and entrenuepeurship, 
+   <p> Having some hidden talents like software programming and entrepreneurship, 
       I would like to work indoors and outdoors. I love travelling, reading   
       novels that are out of this world. 
     </p>
