--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<!-- sticky footer on the bottom-->
 <footer class="footer">
  <div class="container">
-<span class="text-muted">This is my cool portfolio here.</span>
+<span class="text-muted">This is my portfolio here.</span>
   </div>
  </footer>
 
